# ZeroDash

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ZeroDash.sln
ZeroDash/: ConfigParser.cpp  ConfigParser.h  Display.cpp  Display.h  Image.cpp  Image.h  InfoManager.cpp  InfoManager.h  PiHoleClient.cpp  PiHoleClient.h  StatsProvider.cpp  StatsProvider.h  ZeroDash.vcxproj  common.h  default.conf  main.cpp
